[tool.poetry]
name = "scrapy-tutorial"
version = "0.1.0"
description = ""
authors = ["juacy <juacy987@gmail.com>"]
readme = "README.md"
packages = [{include = "scrapy_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
